<?xml version="1.0"?>
<package format="3">
  <name>path_smoothing_control</name>
  <version>0.0.1</version>
  <description>Path smoothing and trajectory control for differential drive robots using ROS 2</description>

  <maintainer email="rajatprajapati870@gmail.com">Rajat Prajapati</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
